--- a/.github/workflows/main_source.yml
+++ b/.github/workflows/main_source.yml
@@ -26,7 +26,7 @@ jobs:
   workflow_dispatch:
     runs-on: ubuntu-latest
     env: 
-      pat_token: ${{ secrets.PAT_TOKEN_GITHUB }}
+      pat_token: ${{ secrets.Token }}
       parameter1: 'Feat'
       parameter2: 'V3.0.0'
 
