--- a/.github/workflows/main_source.yml
+++ b/.github/workflows/main_source.yml
@@ -41,6 +41,6 @@ jobs:
            python -m pip install --upgrade pip
            pip install 'requests>=2.26.0'
           
-    - name: Trigger the Workflow
-      run: |
+    - name: Send data
+      run: 
          python triggerscript.py ${{ env.pat_token }}  ${{ 'AruNiv' }}  ${{ 'Target Workflow' }} ${{ 'My_Target' }} ${{ env.parameter1 }} ${{ env.parameter2 }}
