--- a/.github/workflows/main_source.yml
+++ b/.github/workflows/main_source.yml
@@ -34,7 +34,7 @@ jobs:
         git push
 
     - name: Test Modify
-      uses: My_Target/action-update-file@v1
+      uses: actions/checkout@v2.3.2
       with:
         file-path: AruNiv/My_target/release.txt
         commit-msg: Update release.txt
