--- a/.github/workflows/main_source.yml
+++ b/.github/workflows/main_source.yml
@@ -23,20 +23,17 @@ jobs:
         trigger_workflow: true
         wait_workflow: false
 
-   
-    - uses: actions/checkout@v1
-    - name: Update file
-      run: |
-        sed -i 's/3.2.10/V3.0.0/' AruNiv/My_Target/release.txt
-        git config user.name github-actions
-        git config user.email github-actions@github.com
-        git commit -m "version-update"
-        git push
-
-    - name: Test Modify
-      uses: actions/checkout@v2.3.2
+    - name: Checkout release.txt
+      uses: actions/checkout@v2
       with:
-        file-path: AruNiv/My_Target/release.txt
-        commit-msg: Update release.txt
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-  
+          repository: AruNiv/My_Target
+          token: ${{ secrets.Token }}
+          path: ./release.txt
+
+    - name: Update release.txt
+      run: |
+          sed -i 's/3.2.10/V3.0.0/' AruNiv/My_Target/release.txt
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git commit -m "version-update"
+          git push
