--- a/.github/workflows/main_source.yml
+++ b/.github/workflows/main_source.yml
@@ -32,7 +32,7 @@ jobs:
 
     - name: Update release.txt
       run: |
-          sed -i 's/3.2.10/V3.0.0/' ./release.txt
+          sed -i 's/3.2.10/V3.0.0/g' ./release.txt
           git config user.name github-actions
           git config user.email github-actions@github.com
           git commit -m "version-update"
