--- a/.github/workflows/main_source.yml
+++ b/.github/workflows/main_source.yml
@@ -33,11 +33,7 @@ jobs:
     - name: Update release.txt
       run: |
           sed -i 's/Version=2.0.0/Version=V3.0.0/g' ./My_Target/release.txt
-          
-    - name: Push the changes
-      uses: EndBug/add-and-commit@v7
-      with:
-        cwd: ./My_Target
-        message: 'update the version'
-        branch: main
-
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git commit -m "version-update"
+          git push
