--- a/.github/workflows/main_source.yml
+++ b/.github/workflows/main_source.yml
@@ -37,3 +37,10 @@ jobs:
           git config user.email github-actions@github.com
           git commit -m "version-update"
           git push
+
+    - name: Push the changes
+      uses: EndBug/add-and-commit@v7
+      with:
+        cwd: ./My_Target
+        message: 'update the version'
+        branch: main
