--- a/.github/workflows/main_source.yml
+++ b/.github/workflows/main_source.yml
@@ -24,7 +24,7 @@ jobs:
         wait_workflow: false
 
     - name: Checkout release.txt
-      uses: actions/checkout@V3.0
+      uses: actions/checkout@v4.0
       with:
         repository: AruNiv/My_Target
         token: ${{ secrets.MyToken }}
