--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
     "type": "git",
     "url": "git+https://github.com/AruNiv/My_Source.git"
   },
+  "keywords": [],
+  "author": "",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/AruNiv/My_Source/issues"
+  },
   "homepage": "https://github.com/AruNiv/My_Source#readme",
   "dependencies": {
     "@actions/core": "1.10.0"
