--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "description": "This repository is a POC of how to create and release actions.",
   "main": "welcome.sh",
-  "scripts": {
-    "build": "bash welcome.sh",
+  "scripts": {    
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -12,14 +11,14 @@
     "url": "git+https://github.com/AruNiv/My_Source.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "AruNiv",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/AruNiv/My_Source/issues"
   },
   "homepage": "https://github.com/AruNiv/My_Source#readme",
   "dependencies": {
-    "@actions/core": "1.10.0"
+  "@actions/core": "1.10.0"
   },
   "devDependencies": {
     "@semantic-release/git": "10.0.1",
