--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,11 +14,9 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: 20
-      - run: npm install
-      
-      - run: npm token create
+          node-version: 16
+      - run: npm ci
+      - run: npm run build
       - run: npx semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
