--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,6 @@ jobs:
       - run: npm install --save-exact
       - run: npm ci
      
-      - run: npx semantic-release
+      - run: npx semantic-release --dry-run --no-ci --branches $GITHUB_REF
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
