--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@semantic-release/git": "10.0.1",
     "@semantic-release/github": "8.0.6",
-    "semantic-release": "19.0.5"
+    "semantic-release": "19.0.5",
+    "@semantic-release/exec"
   }
 }
