--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,7 @@ jobs:
       - run: npm ci
       - run: npm install --save-dev @semantic-release/exec
      
-      - run: npx semantic-release --dry-run --no-ci
+      - run: npx semantic-release --dry-run
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - run: bash welcome.sh
