--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ jobs:
       - run: npm install --save-dev @semantic-release/exec
      
       - run:
-          (npx semantic-release --dryRun | grep -oP 'Published release \K.*? ') >> release.txt
+          (npx semantic-release  | grep -oP 'Published release \K.*? ') >> release.txt
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
