--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@actions/core": "1.10.0"
   },
   "devDependencies": {
-    "@semantic-release/exec": "^6.0.3",
+    "@semantic-release/exec": "6.0.3",
     "@semantic-release/git": "10.0.1",
     "@semantic-release/github": "8.0.6",
     "semantic-release": "19.0.5"
