--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,20 +17,13 @@ jobs:
           node-version: 16
       
       - run: npm install --save-exact
-      - run: npm ci
-         
-      - run:
-          npx semantic-release  --dry-run
+      - run: npx semantic-release  --dry-run
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-     
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}   
      
       - name: Push the changes
         uses: EndBug/add-and-commit@v7
         with:
           message: 'update the version'
-          branch: main 
-          
-      
+          branch: main     
         
