--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
       
       - run: npm install --save-exact
       
-      - run: npx semantic-release --no-ci --dry-run | sed -n '/^##/,$p' >> ./release.txt
+      - run: npx semantic-release --no-ci --dry-run | grep '^###' >> ./release.txt
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}   
      
