--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,9 @@ jobs:
       
       - run: npx semantic-release --no-ci --dry-run | grep '^###' >> ./release.txt
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}   
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
+
+      - run: git log -1 --pretty=%B >> ./release.txt
      
       - name: Push the changes
         uses: EndBug/add-and-commit@v7
