--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,12 +18,11 @@ jobs:
       
       - run: npm install --save-exact
       
-      - run: npx semantic-release --no-ci --dry-run | grep '^###' >> ./release.txt
+      - run: npx semantic-release --no-ci --dry-run
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
 
-      - run: git log -1 --pretty=%B >> ./release.txt
-     
+         
       - name: Push the changes
         uses: EndBug/add-and-commit@v7
         with:
