--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,14 +11,14 @@ jobs:
       pull-requests: write
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
-          node-version: 16
+          node-version: 20
       
       - run: npm install --save-exact
-      
-      - run: npx semantic-release --dry-run --no-ci
+      - run: npm ci
+      - run: npx semantic-release --dry-run 
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
 
