--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,13 +11,13 @@ jobs:
       pull-requests: write
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
         with:
-          node-version: 20
+          node-version: 20.x
       
       - run: npm install --save-exact
-      - run: npm ci
+     
       - run: npx semantic-release --dry-run 
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
