--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
       
       - run: npm install --save-exact
      
-      - run: npx semantic-release --dry-run 
+      - run: unset GITHUB_ACTIONS && npx semantic-release --dry-run --no-ci 
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
 
