--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,8 @@
 name: Release
 
 on:
- push:
-  
+  push:
+
 jobs:
   release:
     permissions:
@@ -14,10 +14,9 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: 20.x
-      
+          node-version: 16
       - run: npm install --save-exact
-     
+      
       - run: npx semantic-release --dry-run
         env:
           GITHUB_TOKEN: ${{ secrets.MYTOKEN }}  
