feat: Update release.yml

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,8 +16,8 @@ jobs:
         with:
           node-version: 20
       - run: npm install --save-exact
-      - run: npm ci
-      - run: npx semantic-release --dry-run
+      
+      - run: npx semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.MYTOKEN }}  
          
