--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,7 +30,7 @@ jobs:
      
       - name: Update release.txt
         run: |
-            echo ${{ git log -1 --pretty=%B }} >> ./My_Target/release.txt
+            grep ":" release.txt >> ./My_Target/release.txt
           
       - name: Push the changes
         uses: EndBug/add-and-commit@v7
