--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,7 +30,7 @@ jobs:
      
       - name: Update release.txt
         run: |
-            echo `grep  ":" release.txt` > ./My_Target/release.txt
+            grep '^[a-z]' release.txt > My_Target/release.txt
           
       - name: Push the changes
         uses: EndBug/add-and-commit@v7
