--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,11 +36,12 @@ jobs:
      
       - name: Update release.txt
         run: |
+            var=`grep ':' release.txt`
             grep ':' release.txt > ./My_Target/release.txt
           
       - name: Push the changes
         uses: EndBug/add-and-commit@v7
         with:
           cwd: ./My_Target
-          message: 'update the version'
+          message: $var
           branch: main 
