--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,5 +43,5 @@ jobs:
         uses: EndBug/add-and-commit@v7
         with:
           cwd: ./My_Target
-          message: $var
+          message: ${{ var }}
           branch: main 
