--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,12 +37,11 @@ jobs:
       - name: Update release.txt
         run: |
             grep ':' release.txt > ./My_Target/release.txt
+            echo "##[set-env name=message;]${{grep ':' release.txt}}"
           
       - name: Push the changes
-        env: 
-          commit_msg: ${{ grep ':' release.txt }}
         uses: EndBug/add-and-commit@v7
         with:
           cwd: ./My_Target
-          message: ${{ env.commit_msg }}
+          message: ${{ env.message }}
           branch: main 
