feat: Update package.json

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "git+https://github.com/AruNiv/My_Source.git"
   },
   "keywords": [],
-  "author": "AruNiv",
+  "author": "",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/AruNiv/My_Source/issues"
