--- a/.github/workflows/main_source.yml
+++ b/.github/workflows/main_source.yml
@@ -24,6 +24,8 @@ jobs:
       run: |       
         old_version=`grep ^Version < ./My_Target/install/release/new_release.txt | cut -d"=" -f2`
         new_version=`grep ^[0-9] < release.txt`
+        echo "old version = $old_version"
+        echo "New version = $new_version"
         sed -i 's/$old_version/$new_version/g' ./My_Target/install/release/new_release.txt
 
           
