--- a/.github/workflows/main_source.yml
+++ b/.github/workflows/main_source.yml
@@ -26,7 +26,8 @@ jobs:
     - name: Update new_release.txt
       
       run: |       
-        old_version=`grep ^Version < ./My_Target/install/release/new_release.txt | cut -d"=" -f2`        
+        old_version=`grep ^Version < ./My_Target/install/release/new_release.txt | cut -d"=" -f2` 
+        echo "New version = $new_version"
         echo "old version = $old_version"        
         sed -i 's/$old_version/$new_version/g' ./My_Target/install/release/new_release.txt
 
