--- a/.github/workflows/main_source.yml
+++ b/.github/workflows/main_source.yml
@@ -12,9 +12,11 @@ jobs:
     - name: Check out the repository to the runner
       uses: actions/checkout@v4
     - name: Get new version
+      id: generate_new_version
       run: |
         new_version=`grep ^[0-9] < release.txt`
         echo "New version = $new_version"
+        echo "##[set-output name=new_version;]$(grep ^[0-9] < release.txt)"
           
     - name: Checkout new_release.txt from My_Target
       uses: actions/checkout@v4
@@ -27,6 +29,7 @@ jobs:
       
       run: |       
         old_version=`grep ^Version < ./My_Target/install/release/new_release.txt | cut -d"=" -f2` 
+        new_version=${{ steps.generate_new_version.outputs.new_version }}
         echo "New version = $new_version"
         echo "old version = $old_version"        
         sed -i 's/$old_version/$new_version/g' ./My_Target/install/release/new_release.txt
