--- a/.github/workflows/main_source.yml
+++ b/.github/workflows/main_source.yml
@@ -22,7 +22,7 @@ jobs:
       uses: actions/checkout@v4
       with:
         repository: AruNiv/My_Target
-        token: ${{ secrets.MyToken }}
+        token: ${{ secrets.MYTOKEN }}
         path: ./My_Target      
     
     - name: Update new_release.txt
